tests/fixtures/invalid/type_errors/call_non_function.luma
-- Calling non-function value
let x = 42
x(10)
